--- a/ns-chain/Requirements.txt
+++ b/ns-chain/Requirements.txt
@@ -1,2 +1,12 @@
 # Need to install leveldb first on your OS, then install the below python module
 pip install plyvel
+
+#PS:
+From part-6 onwards, set the PYTHONPATH in the .virtualenv/bin activate file.
+This is needed as we start adding folders, so setting python path is a must
+
+# Part -7 needs below packages
+pip install ecdsa
+pip install base58
+# Read https://en.bitcoin.it/wiki/Technical_background_of_version_1_Bitcoin_addresses
+Also set PYTHONPATH as part-6
