--- a/dapps/thirdweb/wallet-ui/package.json
+++ b/dapps/thirdweb/wallet-ui/package.json
@@ -15,15 +15,12 @@
     "ethers": "^5.6.8",
     "react": "^18.2",
     "react-dom": "^18.2",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.35",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "assert": "^2.0.0",
     "react-app-rewired": "^2.2.1",
     "stream": "^0.0.2"
